<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_result"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewErrorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_incorrectNamesOfFiles"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewReportsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ReplasedReports"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewReportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewNoPointsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_NoPoints"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewNoPointsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/button"
            android:text="@string/btn_close" />

    </LinearLayout>

</ScrollView>
